--- a/TripGuide/SupportingFiles/Info.plist
+++ b/TripGuide/SupportingFiles/Info.plist
@@ -7,6 +7,7 @@
 		<string>Gilroy-Bold.ttf</string>
 		<string>Gilroy-Regular.ttf</string>
 		<string>Gotham-Bold.otf</string>
+		<string>FontsFree-Net-SF-Compact-Rounded-Regular.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
